[project]
name = "krish_paper_fetcher"
version = "0.1.0"
description = "fetching the public papers"
authors = [
    {name = "krishna", email = "krishnagun945@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer (>=0.16.0,<0.17.0)", "pandas (>=2.3.1,<3.0.0)", "requests (>=2.32.4,<3.0.0)", "beautifulsoup4 (>=4.13.4,<5.0.0)", "lxml (>=6.0.0,<7.0.0)", "biopython (>=1.85,<2.0)"]
[project.scripts]
paper-fetcher = "paper_fetcher.main:app"

[tool.poetry]
packages = [{ include = "paper_fetcher" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
types-requests = "^2.32.4.20250611"
types-beautifulsoup4 = "^4.12.0.20250516"
pandas-stubs = "^2.3.0.250703"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
